# metrics-proxy

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  example-config.yaml  notes.md
.github/: rust_checks.yml
src/: cache.rs  client.rs  config.rs  lib.rs  main.rs  metrics.rs  proxy.rs  server.rs  tests.rs
