[package]
name = "metrics-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde-enum-str = "0.3"
reqwest = "0.11.18"
futures = "0.3"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_with = "3.1.0"
prometheus-parse = "0.2.4"
axum = "0.6.19"
hyper = "0.14.27"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.3", features = ["trace", "timeout"] }
duration-string = { version = "0.3.0", features = ["serde"] }
regex = "1.9.1"
serde_regex = "1.1.0"
itertools = "0.11.0"
dissimilar = "1.0.7"
