[package]
name = "metrics-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
prometheus-parse = "0.2.4"
axum = "0.6.19"
hyper = "0.14.27"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.3", features = ["trace", "timeout"] }
duration-string = { version = "0.3.0", features = ["serde"] }
regex = "1.9.1"
itertools = "0.11.0"
clap = { version = "4.4.1", features = ["derive"] }
rustls-pemfile = "1.0.3"
rustls = "0.21.7"
hyper-rustls = "0.24.1"
exitcode = "1.1.2"
pretty_assertions = "1.4.0"
url = { version = "2.4.1", features = ["serde"] }
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4.0"
axum-otel-metrics = { git = "https://github.com/DFINITYManu/axum-otel-metrics.git", rev = "c93e2d4efdf1503ee98e60294712b4ac7942160a" }

[[bin]]
name = "metrics-proxy"
path = "src/main.rs"
